--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,6 +43,11 @@ html {
   display: flex;
 }
 
+#introduction {
+  font-size: 18px;
+  line-height: 24px;
+}
+
 @media screen and (min-width: 900px) {
   .main-container {
     height: 100vh;
@@ -286,7 +291,7 @@ h2 {
   main.projects-overview
   .main-projects
   div.project-wrapper {
-  font-size: 14px;
+  font-size: 16px;
   position: relative;
 }
 
