--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: Montserrat-Regular;
-  src: url(https://dunks1980.com/Montserrat-Regular.4e6c8170.ttf)
-    format("truetype");
+  src: url(https://dunks1980.com/Montserrat-Regular.4e6c8170.ttf) format("truetype");
   font-display: swap;
 }
+
 .main {
   display: block;
   opacity: 1;
@@ -21,12 +21,14 @@ body {
   color: #d1d1d1;
   background: #1d1d20;
   margin: 0;
-  font-family: Montserrat-Regular;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 18px;
 }
 
 html {
   -webkit-text-size-adjust: 100%;
   line-height: 1.15;
+  font-size: 18px;
 }
 
 :root {
@@ -41,11 +43,17 @@ html {
   justify-content: center;
   align-items: flex-start;
   display: flex;
+  font-size: 18px;
 }
 
 #introduction {
   font-size: 18px;
   line-height: 24px;
+}
+
+.eyebrow {
+  font-weight: 500;
+  font-size: 18px;
 }
 
 @media screen and (min-width: 900px) {
@@ -141,10 +149,7 @@ main {
 }
 
 @media screen and (min-width: 900px) {
-  .main-container
-    .main-container-inner
-    .inner-container
-    main.projects-overview {
+  .main-container .main-container-inner .inner-container main.projects-overview {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -173,40 +178,24 @@ main {
 }
 
 @media screen and (min-width: 900px) {
-  .main-container
-    .main-container-inner
-    .inner-container
-    main.projects-overview
-    div {
+  .main-container .main-container-inner .inner-container main.projects-overview div {
     flex: 1;
   }
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-message {
+.main-container .main-container-inner .inner-container main.projects-overview .main-message {
   flex-basis: 53.4752%;
   position: relative;
 }
 
 @media screen and (min-width: 900px) {
-  .main-container
-    .main-container-inner
-    .inner-container
-    main.projects-overview
-    div.spacer {
+  .main-container .main-container-inner .inner-container main.projects-overview div.spacer {
     max-width: 130px;
     min-width: 90px;
   }
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects {
   flex-basis: 30.9017%;
 }
 
@@ -240,24 +229,14 @@ main {
   display: flex;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-message
-  .welcome-message {
+.main-container .main-container-inner .inner-container main.projects-overview .main-message .welcome-message {
   transform-origin: 0;
   opacity: 1;
   transition: all 0.2s linear;
   transform: scaleX(1);
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-message
-  .individual-project {
+.main-container .main-container-inner .inner-container main.projects-overview .main-message .individual-project {
   transform-origin: 100%;
   opacity: 0;
   width: 100%;
@@ -272,12 +251,7 @@ h2 {
   font-weight: 100;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  h2 {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects h2 {
   margin-top: 30px;
   margin-bottom: 30px;
   font-family: Montserrat-Regular;
@@ -285,31 +259,19 @@ h2 {
   font-weight: 100;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  div.project-wrapper {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper {
   font-size: 16px;
   position: relative;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  div.project-wrapper:before {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper:before {
   content: " ";
   width: 90px;
   height: 90px;
-  background: linear-gradient(
-    135deg,
-    var(--grad-1) 0%,
-    var(--grad-2) 50%,
-    var(--grad-1) 100%
-  );
+  background: linear-gradient(135deg,
+      var(--grad-1) 0%,
+      var(--grad-2) 50%,
+      var(--grad-1) 100%);
   opacity: 1;
   border-top-left-radius: 8px;
   transition: all 0.3s ease-in-out;
@@ -319,21 +281,14 @@ h2 {
   left: -2px;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  div.project-wrapper:after {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper:after {
   content: " ";
   width: 90px;
   height: 90px;
-  background: linear-gradient(
-    135deg,
-    var(--grad-2) 0%,
-    var(--grad-1) 50%,
-    var(--grad-2) 100%
-  );
+  background: linear-gradient(135deg,
+      var(--grad-2) 0%,
+      var(--grad-1) 50%,
+      var(--grad-2) 100%);
   opacity: 0;
   border-top-left-radius: 8px;
   transition: all 0.3s ease-in-out;
@@ -343,21 +298,11 @@ h2 {
   left: -2px;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  div.project-wrapper:hover:before {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper:hover:before {
   opacity: 0;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  div.project-wrapper:hover:after {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper:hover:after {
   opacity: 1;
 }
 
@@ -371,12 +316,7 @@ h2 {
   transition: all 0.3s ease-in-out;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-message
-  span {
+.main-container .main-container-inner .inner-container main.projects-overview .main-message span {
   margin-left: 30px;
   font-size: 0.9em;
   font-weight: 100;
@@ -385,12 +325,7 @@ h2 {
   position: relative;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-message
-  span:before {
+.main-container .main-container-inner .inner-container main.projects-overview .main-message span:before {
   content: " ";
   width: 2px;
   background: linear-gradient(0deg, var(--grad-2) 0%, var(--grad-1) 100%);
@@ -400,13 +335,7 @@ h2 {
   left: -30px;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-message
-  .individual-project
-  h2 {
+.main-container .main-container-inner .inner-container main.projects-overview .main-message .individual-project h2 {
   margin-top: 60px;
   margin-bottom: 30px;
   font-family: Montserrat-Regular;
@@ -414,13 +343,7 @@ h2 {
   font-weight: 100;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  div.project-wrapper
-  div {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper div {
   z-index: 1;
   background: #1d1d20;
   border-top-left-radius: 7px;
@@ -442,15 +365,20 @@ a {
   display: flex;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-message
-  #welcome
-  svg {
+.main-container .main-container-inner .inner-container main.projects-overview .main-message #welcome svg {
   width: 75%;
   fill: #fff0;
+}
+
+.name {
+  font-size: 70px;
+  font-weight: 500;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.highlight {
+  color: rgba(83, 255, 255, 0.717);
+  display: inline;
 }
 
 button {
@@ -463,27 +391,14 @@ button {
   -webkit-appearance: button;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-message
-  .individual-project
-  button {
+.main-container .main-container-inner .inner-container main.projects-overview .main-message .individual-project button {
   border: 0 solid #000;
   margin-right: 25px;
   padding: 0;
   position: relative;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  div.project-wrapper
-  div
-  a {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper div a {
   color: #ccc;
   margin-bottom: 15px;
   margin-left: 0;
@@ -492,16 +407,14 @@ button {
   text-decoration: none;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  div.project-wrapper
-  div
-  a:hover {
-  color: #fff;
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper div a {
+  transition: all 0.8s;
+}
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper div a:hover {
+  color: #ffffff;
   letter-spacing: 1px;
+  padding: 2px 0 2px 5px;
+  transition: all 0s;
 }
 
 .hover .gradient1 {
@@ -533,14 +446,7 @@ button {
   transition: all 0.2s ease-in-out;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-message
-  .individual-project
-  button
-  a {
+.main-container .main-container-inner .inner-container main.projects-overview .main-message .individual-project button a {
   text-align: center;
   color: #ccc;
   background: #1d1d20;
@@ -554,14 +460,7 @@ button {
   display: block;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-message
-  .individual-project
-  button
-  a:after {
+.main-container .main-container-inner .inner-container main.projects-overview .main-message .individual-project button a:after {
   content: "";
   height: 2px;
   width: 100%;
@@ -575,51 +474,21 @@ button {
   right: 0;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-message
-  .individual-project
-  button
-  a:hover {
+.main-container .main-container-inner .inner-container main.projects-overview .main-message .individual-project button a:hover {
   color: #fff;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-message
-  .individual-project
-  button
-  a:hover:after {
+.main-container .main-container-inner .inner-container main.projects-overview .main-message .individual-project button a:hover:after {
   background: linear-gradient(270deg, var(--grad-1) 0%, var(--grad-2) 100%);
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  div.project-wrapper
-  div
-  a
-  span {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper div a span {
   transition: all 0.3s ease-in-out;
   display: inline-block;
   position: relative;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  div.project-wrapper
-  div
-  a
-  span:before {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper div a span:before {
   content: "";
   height: 1px;
   width: 100%;
@@ -633,15 +502,7 @@ button {
   right: 0;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  div.project-wrapper
-  div
-  a
-  span:after {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper div a span:after {
   content: "";
   height: 1px;
   width: 100%;
@@ -655,26 +516,71 @@ button {
   right: 0;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  div.project-wrapper
-  div
-  a:hover
-  span:before {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper div a:hover span:before {
   opacity: 0;
 }
 
-.main-container
-  .main-container-inner
-  .inner-container
-  main.projects-overview
-  .main-projects
-  div.project-wrapper
-  div
-  a:hover
-  span:after {
+.main-container .main-container-inner .inner-container main.projects-overview .main-projects div.project-wrapper div a:hover span:after {
   opacity: 1;
+}
+
+
+/* ========= Hover on Projects styles ============= */
+
+
+
+.project-wrapper a::before {
+  transform: scaleX(0);
+  transform-origin: bottom right;
+}
+
+.project-wrapper a:hover::before {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+  transition: transform 1s ease;
+}
+
+.project-wrapper a::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  inset: 0 0 0 0;
+  background: rgba(19, 112, 112, 0.717);
+  z-index: -1;
+  transition: transform 2.5s ease;
+
+  color: #000;
+  border-radius: 2px;
+}
+
+.project-wrapper a {
+  position: relative;
+}
+
+
+/* ===================== Blinking cursor animation =================*/
+.nameWrapper h1 {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  margin: 6px 0 12px 0;
+}
+
+@keyframes cursor-blink {
+  0% {
+    opacity: 0;
+  }
+}
+
+.nameWrapper h1::after {
+  content: "";
+  width: 5px;
+  height: 60px;
+  background: #ec7fff;
+  display: inline-block;
+  animation: cursor-blink 1.5s steps(2) infinite;
 }
