--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,10 @@ body {
   font-size: 18px;
 }
 
+* {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
+}
+
 html {
   -webkit-text-size-adjust: 100%;
   line-height: 1.15;
@@ -103,7 +107,7 @@ html {
 
 @media screen and (min-width: 500px) {
   .main-container .main-container-inner .inner-container {
-    padding: 30px;
+    /* padding: 30px; */
   }
 }
 
@@ -147,7 +151,6 @@ main {
   display: flex;
   transform: translateZ(0);
   margin-top: 60px;
-  overflow: auto;
 }
 
 @media screen and (min-width: 900px) {
